; ModuleID = '/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-adc.c___analogSetWidth.c'
source_filename = "/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-adc.c___analogSetWidth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__analogReturnedWidth = common dso_local global i32 0, align 4
@__analogWidth = common dso_local global i32 0, align 4
@SENS_SAR_START_FORCE_REG = common dso_local global i32 0, align 4
@SENS_SAR1_BIT_WIDTH = common dso_local global i32 0, align 4
@SENS_SAR1_BIT_WIDTH_S = common dso_local global i32 0, align 4
@SENS_SAR_READ_CTRL_REG = common dso_local global i32 0, align 4
@SENS_SAR1_SAMPLE_BIT = common dso_local global i32 0, align 4
@SENS_SAR1_SAMPLE_BIT_S = common dso_local global i32 0, align 4
@SENS_SAR2_BIT_WIDTH = common dso_local global i32 0, align 4
@SENS_SAR2_BIT_WIDTH_S = common dso_local global i32 0, align 4
@SENS_SAR_READ_CTRL2_REG = common dso_local global i32 0, align 4
@SENS_SAR2_SAMPLE_BIT = common dso_local global i32 0, align 4
@SENS_SAR2_SAMPLE_BIT_S = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__analogSetWidth(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 9
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32 9, i32* %2, align 4
  br label %11

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp sgt i32 %7, 12
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store i32 12, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %6
  br label %11

11:                                               ; preds = %10, %5
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* @__analogReturnedWidth, align 4
  %13 = load i32, i32* %2, align 4
  %14 = sub nsw i32 %13, 9
  store i32 %14, i32* @__analogWidth, align 4
  %15 = load i32, i32* @SENS_SAR_START_FORCE_REG, align 4
  %16 = load i32, i32* @SENS_SAR1_BIT_WIDTH, align 4
  %17 = load i32, i32* @__analogWidth, align 4
  %18 = load i32, i32* @SENS_SAR1_BIT_WIDTH_S, align 4
  %19 = call i32 @SET_PERI_REG_BITS(i32 %15, i32 %16, i32 %17, i32 %18)
  %20 = load i32, i32* @SENS_SAR_READ_CTRL_REG, align 4
  %21 = load i32, i32* @SENS_SAR1_SAMPLE_BIT, align 4
  %22 = load i32, i32* @__analogWidth, align 4
  %23 = load i32, i32* @SENS_SAR1_SAMPLE_BIT_S, align 4
  %24 = call i32 @SET_PERI_REG_BITS(i32 %20, i32 %21, i32 %22, i32 %23)
  %25 = load i32, i32* @SENS_SAR_START_FORCE_REG, align 4
  %26 = load i32, i32* @SENS_SAR2_BIT_WIDTH, align 4
  %27 = load i32, i32* @__analogWidth, align 4
  %28 = load i32, i32* @SENS_SAR2_BIT_WIDTH_S, align 4
  %29 = call i32 @SET_PERI_REG_BITS(i32 %25, i32 %26, i32 %27, i32 %28)
  %30 = load i32, i32* @SENS_SAR_READ_CTRL2_REG, align 4
  %31 = load i32, i32* @SENS_SAR2_SAMPLE_BIT, align 4
  %32 = load i32, i32* @__analogWidth, align 4
  %33 = load i32, i32* @SENS_SAR2_SAMPLE_BIT_S, align 4
  %34 = call i32 @SET_PERI_REG_BITS(i32 %30, i32 %31, i32 %32, i32 %33)
  ret void
}

declare dso_local i32 @SET_PERI_REG_BITS(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
